--- a/arch/mips/Makefile
+++ b/arch/mips/Makefile
@@ -32,7 +32,7 @@ arch-$(CONFIG_CPU_MIPS64_R1) += -march=mips64 -Wa,-mips64
 arch-$(CONFIG_CPU_MIPS64_R2) += -march=mips64r2 -Wa,-mips64r2
 arch-$(CONFIG_CPU_MIPS64_R6) += -march=mips64r6 -Wa,-mips64r6
 
-arch-$(CONFIG_MACH_NAIVEMIPS) += -mno-branch-likely
+arch-$(CONFIG_MACH_NAIVEMIPS) += -mno-branch-likely -mdivide-breaks
 
 # Allow extra optimization for specific CPUs/SoCs
 tune-$(CONFIG_MIPS_TUNE_4KC) += -mtune=4kc
