--- a/configs/naivemips_thinpad_defconfig
+++ b/configs/naivemips_thinpad_defconfig
@@ -251,7 +251,7 @@ CONFIG_CMD_MEMINFO=y
 # CONFIG_CMD_IOTRACE is not set
 CONFIG_CMD_LOADB=y
 CONFIG_CMD_LOADS=y
-# CONFIG_CMD_FLASH is not set
+CONFIG_CMD_FLASH=y
 # CONFIG_CMD_GPT is not set
 # CONFIG_CMD_ARMFLASH is not set
 # CONFIG_CMD_MMC is not set
@@ -502,8 +502,10 @@ CONFIG_DM_GPIO=y
 #
 # MTD Support
 #
-# CONFIG_MTD is not set
-# CONFIG_MTD_NOR_FLASH is not set
+CONFIG_MTD=y
+CONFIG_MTD_NOR_FLASH=y
+CONFIG_CFI_FLASH=y
+# CONFIG_ALTERA_QSPI is not set
 
 #
 # NAND Device Support
