--- a/arch/mips/mach-naivemips/Kconfig
+++ b/arch/mips/mach-naivemips/Kconfig
@@ -7,9 +7,12 @@ choice
 config TARGET_NAIVEMIPS_THINPAD
     bool "Thinpad board 2017"
 
+config TARGET_NAIVEMIPS_K7EES
+    bool "Thinpad board with Kintex-7 by E-Elements"
 
 endchoice
 
 source "board/thucst/Kconfig"
+source "board/e-elements/Kconfig"
 
 endmenu
