default config for nscscc

--- a/configs/naivemips_nscscc_defconfig
+++ b/configs/naivemips_nscscc_defconfig
@@ -245,21 +245,21 @@ CONFIG_CMD_CRC32=y
 # Device access commands
 #
 # CONFIG_CMD_CLK is not set
-# CONFIG_CMD_DM is not set
+CONFIG_CMD_DM=y
 # CONFIG_CMD_DEMO is not set
 # CONFIG_CMD_IDE is not set
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
 CONFIG_CMD_LOADB=y
 CONFIG_CMD_LOADS=y
-CONFIG_CMD_FLASH=y
+# CONFIG_CMD_FLASH is not set
 # CONFIG_CMD_GPT is not set
 # CONFIG_CMD_ARMFLASH is not set
 # CONFIG_CMD_MMC is not set
 # CONFIG_CMD_NAND is not set
 # CONFIG_CMD_PART is not set
-# CONFIG_CMD_SF is not set
-# CONFIG_CMD_SPI is not set
+CONFIG_CMD_SF=y
+CONFIG_CMD_SPI=y
 # CONFIG_CMD_I2C is not set
 # CONFIG_CMD_USB is not set
 # CONFIG_CMD_DFU is not set
@@ -524,7 +524,21 @@ CONFIG_MTD=y
 #
 # SPI Flash Support
 #
-# CONFIG_SPI_FLASH is not set
+CONFIG_DM_SPI_FLASH=y
+CONFIG_SPI_FLASH=y
+# CONFIG_SPI_FLASH_BAR is not set
+# CONFIG_SF_DUAL_FLASH is not set
+# CONFIG_SPI_FLASH_ATMEL is not set
+CONFIG_SPI_FLASH_EON=y
+CONFIG_SPI_FLASH_GIGADEVICE=y
+CONFIG_SPI_FLASH_MACRONIX=y
+CONFIG_SPI_FLASH_SPANSION=y
+CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_SST=y
+CONFIG_SPI_FLASH_WINBOND=y
+CONFIG_SPI_FLASH_USE_4K_SECTORS=y
+# CONFIG_SPI_FLASH_DATAFLASH is not set
+CONFIG_SPI_FLASH_MTD=y
 
 #
 # UBI support
@@ -660,7 +674,21 @@ CONFIG_SYS_NS16550=y
 #
 # SPI Support
 #
-# CONFIG_DM_SPI is not set
+CONFIG_DM_SPI=y
+# CONFIG_ALTERA_SPI is not set
+# CONFIG_CADENCE_QSPI is not set
+# CONFIG_DESIGNWARE_SPI is not set
+# CONFIG_EXYNOS_SPI is not set
+# CONFIG_FSL_DSPI is not set
+# CONFIG_ICH_SPI is not set
+# CONFIG_MVEBU_A3700_SPI is not set
+# CONFIG_ROCKCHIP_SPI is not set
+# CONFIG_TEGRA114_SPI is not set
+# CONFIG_TEGRA20_SFLASH is not set
+# CONFIG_TEGRA20_SLINK is not set
+# CONFIG_TEGRA210_QSPI is not set
+CONFIG_XILINX_SPI=y
+# CONFIG_OMAP3_SPI is not set
 # CONFIG_SOFT_SPI is not set
 # CONFIG_FSL_ESPI is not set
 # CONFIG_FSL_QSPI is not set
